--- a/ngetes.html
+++ b/ngetes.html
@@ -51,7 +51,7 @@
     <!-- End Meta Pixel Code -->
     <script>
         function redirect() {
-            var targetURL = "https://www.contoh.com"; // Ganti dengan URL tujuan kamu
+            var targetURL = "https://www.youtube.com/"; // Ganti dengan URL tujuan kamu
             window.location.href = targetURL;
         }
         setTimeout(redirect, 3000); // Redirect setelah 3 detik
